-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.0
-
QtCreator 4.3.1 Snapshot 1229 (2017-07-27) / Qt 5.9.1 / Ubuntu 16.04
-
4280e937377a4b49bbd95f6b594b28b3fc372fbb
When switching a git branch on the command line (outside of QtCreator) the branch name is not updated in the titlebar of the QtCreator window:
<filename>(<directory> @ <project>) - [<branch-name>] - <session> - Qt Creator
The branch name in the project view is updated immediately.
For Gerrit Dashboard: QTCREATORBUG-18485 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
205453,3 | Refresh window title on app activation | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |