Refresh window title on app activation

Task-number: QTCREATORBUG-18485
Change-Id: I5598dd628a76213fc4b9e49a002818b2fa3663cd
Reviewed-by: Eike Ziller <eike.ziller@qt.io>